chore:[minor] adding new env to the example

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ DATABASE_NAME=<YOUR DATABASE NAME>
 DATABASE_USERNAME=<YOUR DATABASE USERNAME>
 DATABASE_PASSWORD=<YOUR DATABASE PASSWORD>
 
+DATABASE_CONNECTION_URI_ONLINE=<YOUR DATABASE URI ONLINE>
+
 JWT_SECRET_KEY=<YOUR JWT SECRET KEY TOKEN>
 JWT_REFRESH_KEY=<YOUR JWT REFRESH KEY TOKEN>
 JWT_LIMIT=<YOUR TOKEN LIMIT>
