fix:[major] update folder templat settings again

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,8 +20,8 @@
       "",
       "@Schema({ collection: '<FTName | plural>' })",
       "export class <FTName | pascalcase>MongoEntity extends BaseMongoEntity<typeof <FTName | pascalcase>MongoEntity> {",
-      "  // Put your schema here",
-      "  ",
+      "   @Prop({ required: true, default: false })",
+      "   is_online: boolean;",
       "}",
       "",
       "export const <FTName | pascalcase>Schema = SchemaFactory.createForClass(<FTName | pascalcase>MongoEntity);",
@@ -33,17 +33,16 @@
     "create-entity": [
       "import { AggregateRoot } from 'src/core/base-classes/domain/aggregate-root';",
       "",
-      "export interface <FTName | pascalcase>Props {",
-      "  // put field interface here",
-      "  name: string",
+      "export interface I<FTName | pascalcase>Props {",
+      "  is_online: boolean",
       "}",
       "",
-      "export class <FTName | pascalcase>Entity extends AggregateRoot<<FTName | pascalcase>Props> {",
-      "  constructor(props: <FTName | pascalcase>Props) {",
+      "export class <FTName | pascalcase>Entity extends AggregateRoot<I<FTName | pascalcase>Props> {",
+      "  constructor(props: I<FTName | pascalcase>Props) {",
       "    super(props);",
       "  }",
       "",
-      "  static create(props: <FTName | pascalcase>Props) {",
+      "  static create(props: I<FTName | pascalcase>Props) {",
       "    return new <FTName | pascalcase>Entity(props);",
       "  }",
       "}",
@@ -64,7 +63,7 @@
       "\tconst props = entity.getPropsCopy();",
       "",
       "\tconst mongoProps: MongoEntityProps<<FTName | pascalcase>MongoEntity> = {",
-      "\t  // put field here",
+      "\t  ...props",
       "\t}",
       "\treturn mongoProps",
       "\t}",
