--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^4.8.1",
     "@nestjs/throttler": "^2.0.1",
     "bcrypt": "^5.0.1",
@@ -59,6 +60,7 @@
     "@nestjs/testing": "^7.6.15",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^4.0.1",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
