--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
